--- a/css/layout/footer.css
+++ b/css/layout/footer.css
@@ -1,9 +1,9 @@
 ﻿/********************/
 /*   Footer Styles  */
+/********************/
 /* - Menu           */
 /* - Social         */
 /* - Copyright text */
-/* - FontAwesome    */
 /********************/
 .site-footer {
     color: #000000;
