--- a/Site.Master
+++ b/Site.Master
@@ -34,12 +34,12 @@
 </head>
 <body>
     <form id="form" runat="server" >
-        <header class="header">
-            <nav class="top-nav">
-                <div class="container">
-                    <div class="top-nav-bar clearfix brand-color">
-                        <a href="tel:+1-012-345-6789" class="phone-box brand-text-color"><i class="fa fa-phone-square"></i>(012) 345-6789</a>
-                        <a href="#" data-activates="nav-mobile" class="button-collapse top-nav full hide-on-large-only">Menu <i class="fa fa-bars"></i></a>
+        <header class="header animated fadeInDown">
+            <nav class="mobile-header">
+                <div class="row">
+                    <div class="mobile-bar clearfix">
+                        <a href="tel:+1-012-345-6789" class="phone-box"><i class="fa fa-phone-square"></i>(012) 345-6789</a>
+                        <a href="#" class="menu-icon mobile-menu">Menu <i class="fa fa-bars"></i></a>
 <%--                <a href="tel:+1-012-345-6789" class="phone-box">
                         <i class="material-icons">phone</i>(012) 345-6789
                     </a>--%>
