--- a/css/base/reset.css
+++ b/css/base/reset.css
@@ -1,15 +1,26 @@
 ﻿/*********/
 /* Reset */
 /*********/
-/* * Set up a decent box model on the root element
- */html { box-sizing: border-box; }/*
+
+/*
+ * Set up a decent box model on the root element
+ */
+html { box-sizing: border-box; }
+
+/*
  * Make all elements from the DOM inherit from the parent box-sizing
- * Since `*` has a specificity of 0, it does not override the `html` value * making all elements inheriting from the root box-sizing value * See: https://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/ */*, *::before, *::after { box-sizing: inherit; }
+ * Since `*` has a specificity of 0, it does not override the `html` value
+ * making all elements inheriting from the root box-sizing value
+ * See: https://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/
+ */
+
+*, *::before, *::after { box-sizing: inherit; }
+
 article, aside, details, figcaption, figure, footer, header, hgroup, main, nav, section, summary {
     display: block;
 }
 
-audio, canvas, video {
+/*audio, canvas, video {
     display: inline-block;
 }
 
@@ -24,7 +35,7 @@ audio, canvas, video {
 
 script {
     display: none !important;
-}
+}*/
 
 html {
     font-family: sans-serif;
@@ -32,7 +43,7 @@ html {
     -webkit-text-size-adjust: 100%;
 }
 
-body {
+/*body {
     margin: 0;
 }
 
@@ -226,4 +237,4 @@ img.aligncenter {
     display: block;
     margin-left: auto;
     margin-right: auto;
-}
+}*/
