--- a/css/base/typography.css
+++ b/css/base/typography.css
@@ -1,8 +1,9 @@
 ﻿/*********************/
 /* typography styles */
 /*********************/
-/* - headings        */
+/* - Headlines       */
 /* - Paragraph       */
+/* - Clearfix (moved to helpers) */
 /* - Lists           */
 /* - Links           */
 /* - Template        */
@@ -12,7 +13,17 @@
 /* - Opacity         */
 /* - Animations      */
 /* - FontAwesome     */
+/* - responsive      */
 /*********************/
+body, html {
+    height: 100%;
+}
+
+html {
+    font-size: 100%;
+    box-sizing: border-box;
+}
+
 body {
     display: block !important;
     color: #000000;
@@ -20,9 +31,31 @@ body {
     font-size: 16px;
 }
 
-    body form .logged-in {
+    /*body.logged-in {
         padding-top: 32px;
+    }*/
+/**********/
+/* Full Width Page content */
+/**********/
+body {
+    height: 100%;
+    width: 100%;
+    position: relative;
+}
+
+    body .full-width-wrap, body .full-width-sub-wrap {
+        overflow: hidden;
     }
+
+.full-width-page {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+body .full-width-sub-wrap.single-post {
+    overflow: visible;
+}
 
 /* Headlines */
 h1, h2, h3, h4, h5, h6 {
@@ -111,6 +144,33 @@ a:hover {
     color: #2d8536;
 }
 
+/* Buttons */
+.button {
+    padding: 15px 14px;
+    text-align: center;
+    display: inline-block;
+    text-transform: uppercase;
+    color: #ffffff;
+    background: #1d85f5;
+    font-weight: 300;
+    border: 2px solid #fff;
+    font-size: 15px;
+    text-decoration: none;
+}
+
+    .button:hover {
+        color: #ffffff;
+        background: #000000;
+    }
+
+    .button .fa {
+        margin: 0 0 0 3px;
+    }
+
+.content .button {
+    max-width: 200px;
+}
+
 /* Template */
 .row {
     max-width: 1280px;
@@ -134,7 +194,7 @@ iframe {
 }
 
 /* Sticky */
-body form .logged-in .sticky-container {
+body.logged-in .sticky-container {
     top: 32px;
 }
 
@@ -350,12 +410,28 @@ input:-moz-placeholder {
     color: #00544a;
 }
 
+/***************/
 /* FontAwesome */
-/*.content ul li:before,
+/***************/
+.content ul li:before,
 .sidebar .section.pages ul li:before,
 .top-bar .menu-icon span:before {
     font-family: "FontAwesome";
     font-weight: normal;
     font-style: normal;
     display: inline-block;
-}*/
+}
+
+/* responsive */
+@media screen and (max-width: 480px) {
+    body {
+        min-width: 320px;
+    }
+}
+
+@media screen and (max-width: 640px) {
+    body {
+        overflow: auto;
+        height: auto;
+    }
+}
