--- a/css/layout.css
+++ b/css/layout.css
@@ -28,21 +28,31 @@
 .header {
     padding: 17px 0;
     width: 100%;
-    background: url(layout/images/top-shadow.png) no-repeat center top;
+    background: url(../img/top-shadow.png) no-repeat center top;
     background-size: cover;
     height: 200px;
+    position: absolute;
+    top: 0;
+    opacity: 0;
+    z-index: 999;
 }
+
+    .header .row {
+        margin: 0;
+        padding: 0;
+    }
 
 .single-col-main .header {
     height: 230px;
 }
 
-.full-width-page .header {
+/*.full-width-page .header {
+.header {
     position: absolute;
     width: 100%;
     top: 0;
     z-index: 999;
-}
+}*/
 
 /* Logo */
 .header .logo {
@@ -204,11 +214,7 @@
     .header .top-bar ul > li {
         font-family: Josefin;
     }
-    /*.header .top-bar ul li.is-dropdown-submenu-parent ul {height: auto; margin: 0; padding: 0 10px 5px; background-color: #ffffff; border-top: none;}*/
-    /*.header .top-bar ul li.opens-right > .is-dropdown-submenu {border-color: #000000;}*/
-    /*.header .top-bar ul li.is-dropdown-submenu-parent > a {padding-right: .7rem;}*/
-    /*.header .top-bar ul li.is-dropdown-submenu-parent > a:after {border: none;}*/
-    /*.header .top-bar ul li.is-dropdown-submenu-parent .is-dropdown-submenu {max-width: 170px;}*/
+
     .header .top-bar ul li ul li {
         padding: 0;
         margin: 0;
@@ -2019,6 +2025,38 @@ _:-ms-lang(x), .downanimate {
         z-index: 10;
         width: 100%;
     }
+
+/* responsive */
+
+@media screen and (max-width: 640px) {
+    .header {
+        height: auto;
+        position: fixed !important;
+        background: #fff;
+        padding-top: 0px;
+        padding-bottom: 27px;
+    }
+
+    .mobile-header {
+        margin-bottom: 30px;
+    }
+
+    .header .logo {
+        margin-bottom: 0;
+        width: 100%;
+    }
+
+        .header .logo img {
+            margin: 0 auto;
+        }
+}
+
+@media screen and (max-width: 1200px) {
+    .header .logo {
+        padding-left: 1em;
+    }
+}
+
 /*****************************/
 /*      Content Styles       */
 /*****************************/
@@ -2990,27 +3028,39 @@ blockquote p {
 /* - Social         */
 /* - Copyright text */
 /********************/
-.site-footer {
+.footer {
     color: #000000;
     margin: 0;
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    opacity: 0;
     z-index: 99;
 }
 
-    .site-footer .content {
-        position: relative;
-        padding: 14px 0 0 0;
-        width: 100%;
-        bottom: 0;
-        background: url(layout/img/bottom-shadow.png) no-repeat center bottom;
-        background-size: cover;
-    }
 
-.single-col-main .site-footer .content > .row {
-    position: initial;
+.footer-wrap {
+    position: relative;
+    padding: 14px 0 0 0;
+    width: 100%;
+    bottom: 0;
+    background: url(layout/images/bottom-shadow.png) no-repeat center bottom;
+    background-size: cover;
 }
 
+    .footer-wrap .copyright {
+        padding-top: 53px;
+        padding-bottom: 14px;
+    }
+
+    .footer-wrap > .row {
+        position: initial;
+        margin: 0;
+        padding: 0;
+    }
+
 /* Menu */
-/*.site-footer .menu {
+.footer .menu {
     margin: 0 0 10px;
 }
 
@@ -3040,10 +3090,10 @@ blockquote p {
 
             .footer .menu ul li ul {
                 display: none;
-            }*/
+            }
 
 /* Social */
-/*.footer .social ul {
+.footer .social ul {
     list-style: none;
     float: right;
     padding-top: 3px;
@@ -3075,17 +3125,15 @@ blockquote p {
 
         .footer .social li a .hide {
             display: none;
-        }*/
+        }
 
 /* Copyright text */
-.site-footer .content .copyright {
-    padding-top: 53px;
-    padding-bottom: 14px;
+.footer .copyright {
     position: relative;
     z-index: 9;
 }
 
-    .site-footer .content .copyright p {
+    .footer .copyright p {
         font-size: 14px;
         font-weight: 300;
         color: #cfcfcf;
@@ -3093,14 +3141,32 @@ blockquote p {
         text-align: center;
     }
 
-
-        .site-footer .content .copyright p a {
+        .footer .copyright p a {
             text-decoration: none;
             font-size: 14px;
             font-weight: 300;
             color: #cfcfcf;
         }
 
-            .site-footer .content .copyright p a:hover {
+            .footer .copyright p a:hover {
                 color: #7abaf3;
             }
+
+@media screen and (max-width: 640px) {
+    .footer, .footer-wrap, .footer-wrap > .row {
+        position: static !important;
+    }
+
+    .footer-wrap {
+        background: #3a3a3c;
+        height: auto;
+    }
+
+        .footer-wrap .copyright {
+            padding: 20px 0 33px 0;
+        }
+
+    .footer .copyright p, .footer .copyright p a {
+        color: #fff;
+    }
+}
