--- a/css/base.css
+++ b/css/base.css
@@ -7,27 +7,17 @@
 /* - helpers        */
 /********************/
 
-/*********/
-/* Reset */
-/*********/
-
-/*
- * Set up a decent box model on the root element
- */
-html { box-sizing: border-box; }
-
-/*
- * Make all elements from the DOM inherit from the parent box-sizing
- * Since `*` has a specificity of 0, it does not override the `html` value
- * making all elements inheriting from the root box-sizing value
- * See: https://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/
- */
-
-*, *::before, *::after { box-sizing: inherit; }
-
-article, aside, details, figcaption, figure, footer, header, hgroup, main, nav, section, summary {
-    display: block;
+/****************/
+/* Reset styles */
+/****************/
+blockquote, dd, div, dl, dt, form, h1, h2, h3, h4, h5, h6, li, ol, p, pre, td, th, ul {
+    margin: 0;
+    padding: 0;
 }
+
+/*article, aside, details, figcaption, figure, footer, header, hgroup, main, nav, section, summary {
+    display: block;
+}*/
 
 /*audio, canvas, video {
     display: inline-block;
@@ -46,11 +36,11 @@ script {
     display: none !important;
 }*/
 
-html {
+/*html {
     font-family: sans-serif;
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
-}
+}*/
 
 /*body {
     margin: 0;
@@ -353,6 +343,28 @@ body {
     /*body.logged-in {
         padding-top: 32px;
     }*/
+/**********/
+/* Full Width Page content */
+/**********/
+body {
+    height: 100%;
+    width: 100%;
+    position: relative;
+}
+
+    body .full-width-wrap, body .full-width-sub-wrap {
+        overflow: hidden;
+    }
+
+.full-width-page {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+body .full-width-sub-wrap.single-post {
+    overflow: visible;
+}
 
 /* Headlines */
 h1, h2, h3, h4, h5, h6 {
