--- a/css/site.css
+++ b/css/site.css
@@ -3820,10 +3820,7 @@ button.picker__today:focus, button.picker__clear:focus, button.picker__close:foc
 /* - variables     */
 /* - animate       */
 /*******************/
-/******************************************************/
-/* This file contains all application-wide variables. */ 
-/******************************************************/
-.brand-color {
+/******************************************************//* This file contains all application-wide variables. */ /******************************************************/.brand-color {
     background-color: #9bcbc2;
 }
 
@@ -7173,27 +7170,17 @@ button.picker__today:focus, button.picker__clear:focus, button.picker__close:foc
 /* - helpers        */
 /********************/
 
-/*********/
-/* Reset */
-/*********/
-
-/*
- * Set up a decent box model on the root element
- */
-html { box-sizing: border-box; }
-
-/*
- * Make all elements from the DOM inherit from the parent box-sizing
- * Since `*` has a specificity of 0, it does not override the `html` value
- * making all elements inheriting from the root box-sizing value
- * See: https://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/
- */
-
-*, *::before, *::after { box-sizing: inherit; }
-
-article, aside, details, figcaption, figure, footer, header, hgroup, main, nav, section, summary {
-    display: block;
+/****************/
+/* Reset styles */
+/****************/
+blockquote, dd, div, dl, dt, form, h1, h2, h3, h4, h5, h6, li, ol, p, pre, td, th, ul {
+    margin: 0;
+    padding: 0;
 }
+
+/*article, aside, details, figcaption, figure, footer, header, hgroup, main, nav, section, summary {
+    display: block;
+}*/
 
 /*audio, canvas, video {
     display: inline-block;
@@ -7212,11 +7199,11 @@ script {
     display: none !important;
 }*/
 
-html {
+/*html {
     font-family: sans-serif;
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
-}
+}*/
 
 /*body {
     margin: 0;
@@ -7519,6 +7506,28 @@ body {
     /*body.logged-in {
         padding-top: 32px;
     }*/
+/**********/
+/* Full Width Page content */
+/**********/
+body {
+    height: 100%;
+    width: 100%;
+    position: relative;
+}
+
+    body .full-width-wrap, body .full-width-sub-wrap {
+        overflow: hidden;
+    }
+
+.full-width-page {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+body .full-width-sub-wrap.single-post {
+    overflow: visible;
+}
 
 /* Headlines */
 h1, h2, h3, h4, h5, h6 {
@@ -7898,13 +7907,7 @@ input:-moz-placeholder {
         height: auto;
     }
 }
-/************/
-/* helpers. */
-/* - clearfix */
-/**************/
-
-/* Clearfix */
-.clearfix {
+/************//* helpers. *//* - clearfix *//**************//* Clearfix */.clearfix {
     zoom: 1;
 }
 .clearfix:before, .clearfix:after {
@@ -7916,38 +7919,8 @@ input:-moz-placeholder {
     clear: both;
 }
 
-
-
-
-/*
- * Hide text while making it readable for screen readers
- * 1. Needed in WebKit-based browsers because of an implementation bug;
- *    See: https://code.google.com/p/chromium/issues/detail?id=457146
-*/
-
-.hide-text {
-    overflow: hidden;
-    padding: 0; /* 1 */
-    text-indent: 101%;
-    white-space: nowrap;
-}
-
-/*
- * Hide element while making it readable for screen readers
- * Shamelessly borrowed from HTML5Boilerplate:
- * https://github.com/h5bp/html5-boilerplate/blob/master/src/css/main.css#L119-L133
- */
-
-.visually-hidden {
-    border: 0;
-    clip: rect(0 0 0 0);
-    height: 1px;
-    margin: -1px;
-    overflow: hidden;
-    padding: 0;
-    position: absolute;
-    width: 1px;
-}
+/*
+ * Hide text while making it readable for screen readers * 1. Needed in WebKit-based browsers because of an implementation bug; *    See: https://code.google.com/p/chromium/issues/detail?id=457146*/.hide-text {    overflow: hidden;    padding: 0; /* 1 */    text-indent: 101%;    white-space: nowrap;}/* * Hide element while making it readable for screen readers * Shamelessly borrowed from HTML5Boilerplate: * https://github.com/h5bp/html5-boilerplate/blob/master/src/css/main.css#L119-L133 */.visually-hidden {    border: 0;    clip: rect(0 0 0 0);    height: 1px;    margin: -1px;    overflow: hidden;    padding: 0;    position: absolute;    width: 1px;}
 /*******************/
 /*   CSS Scripts   */
 /*******************/
@@ -7965,11 +7938,7 @@ input:-moz-placeholder {
 /*******************/
 /*   CSS Scripts   */
 /*******************/
-/* - container     */
-/* - nav           */
-/* - header        */
-/* - content       */
-/* - footer        */
+/* - container     *//* - nav           *//* - header        *//* - content       *//* - footer        */
 /* - responsive    */
 /*******************/
 /********************************/
@@ -7996,21 +7965,31 @@ input:-moz-placeholder {
 .header {
     padding: 17px 0;
     width: 100%;
-    background: url(layout/images/top-shadow.png) no-repeat center top;
+    background: url(../img/top-shadow.png) no-repeat center top;
     background-size: cover;
     height: 200px;
+    position: absolute;
+    top: 0;
+    opacity: 0;
+    z-index: 999;
 }
+
+    .header .row {
+        margin: 0;
+        padding: 0;
+    }
 
 .single-col-main .header {
     height: 230px;
 }
 
-.full-width-page .header {
+/*.full-width-page .header {
+.header {
     position: absolute;
     width: 100%;
     top: 0;
     z-index: 999;
-}
+}*/
 
 /* Logo */
 .header .logo {
@@ -8172,11 +8151,7 @@ input:-moz-placeholder {
     .header .top-bar ul > li {
         font-family: Josefin;
     }
-    /*.header .top-bar ul li.is-dropdown-submenu-parent ul {height: auto; margin: 0; padding: 0 10px 5px; background-color: #ffffff; border-top: none;}*/
-    /*.header .top-bar ul li.opens-right > .is-dropdown-submenu {border-color: #000000;}*/
-    /*.header .top-bar ul li.is-dropdown-submenu-parent > a {padding-right: .7rem;}*/
-    /*.header .top-bar ul li.is-dropdown-submenu-parent > a:after {border: none;}*/
-    /*.header .top-bar ul li.is-dropdown-submenu-parent .is-dropdown-submenu {max-width: 170px;}*/
+
     .header .top-bar ul li ul li {
         padding: 0;
         margin: 0;
@@ -9987,6 +9962,38 @@ _:-ms-lang(x), .downanimate {
         z-index: 10;
         width: 100%;
     }
+
+/* responsive */
+
+@media screen and (max-width: 640px) {
+    .header {
+        height: auto;
+        position: fixed !important;
+        background: #fff;
+        padding-top: 0px;
+        padding-bottom: 27px;
+    }
+
+    .mobile-header {
+        margin-bottom: 30px;
+    }
+
+    .header .logo {
+        margin-bottom: 0;
+        width: 100%;
+    }
+
+        .header .logo img {
+            margin: 0 auto;
+        }
+}
+
+@media screen and (max-width: 1200px) {
+    .header .logo {
+        padding-left: 1em;
+    }
+}
+
 /*****************************/
 /*      Content Styles       */
 /*****************************/
@@ -10958,27 +10965,39 @@ blockquote p {
 /* - Social         */
 /* - Copyright text */
 /********************/
-.site-footer {
+.footer {
     color: #000000;
     margin: 0;
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    opacity: 0;
     z-index: 99;
 }
 
-    .site-footer .content {
-        position: relative;
-        padding: 14px 0 0 0;
-        width: 100%;
-        bottom: 0;
-        background: url(layout/img/bottom-shadow.png) no-repeat center bottom;
-        background-size: cover;
-    }
 
-.single-col-main .site-footer .content > .row {
-    position: initial;
+.footer-wrap {
+    position: relative;
+    padding: 14px 0 0 0;
+    width: 100%;
+    bottom: 0;
+    background: url(layout/images/bottom-shadow.png) no-repeat center bottom;
+    background-size: cover;
 }
 
+    .footer-wrap .copyright {
+        padding-top: 53px;
+        padding-bottom: 14px;
+    }
+
+    .footer-wrap > .row {
+        position: initial;
+        margin: 0;
+        padding: 0;
+    }
+
 /* Menu */
-/*.site-footer .menu {
+.footer .menu {
     margin: 0 0 10px;
 }
 
@@ -11008,10 +11027,10 @@ blockquote p {
 
             .footer .menu ul li ul {
                 display: none;
-            }*/
+            }
 
 /* Social */
-/*.footer .social ul {
+.footer .social ul {
     list-style: none;
     float: right;
     padding-top: 3px;
@@ -11043,17 +11062,15 @@ blockquote p {
 
         .footer .social li a .hide {
             display: none;
-        }*/
+        }
 
 /* Copyright text */
-.site-footer .content .copyright {
-    padding-top: 53px;
-    padding-bottom: 14px;
+.footer .copyright {
     position: relative;
     z-index: 9;
 }
 
-    .site-footer .content .copyright p {
+    .footer .copyright p {
         font-size: 14px;
         font-weight: 300;
         color: #cfcfcf;
@@ -11061,17 +11078,35 @@ blockquote p {
         text-align: center;
     }
 
-
-        .site-footer .content .copyright p a {
+        .footer .copyright p a {
             text-decoration: none;
             font-size: 14px;
             font-weight: 300;
             color: #cfcfcf;
         }
 
-            .site-footer .content .copyright p a:hover {
+            .footer .copyright p a:hover {
                 color: #7abaf3;
             }
+
+@media screen and (max-width: 640px) {
+    .footer, .footer-wrap, .footer-wrap > .row {
+        position: static !important;
+    }
+
+    .footer-wrap {
+        background: #3a3a3c;
+        height: auto;
+    }
+
+        .footer-wrap .copyright {
+            padding: 20px 0 33px 0;
+        }
+
+    .footer .copyright p, .footer .copyright p a {
+        color: #fff;
+    }
+}
 /********************/
 /*   CSS Scripts    */
 /********************/
